--- a/apple-app-site-association.json
+++ b/apple-app-site-association.json
@@ -1,5 +1,6 @@
 {
   "applinks": {
+      "apps": [ "26P3P56434.com.sportvita.sportvita" ],
       "details": [
            {
              "appID": "26P3P56434.com.sportvita.sportvita" ,
